2011-03-03	Chris Johns <chrisj@rtems.org>

	PR 1749/filesystem
	* libcsupport/src/mknod.c: Fix the incorrect handling of the file type
	in the mode value o reject invalid types as per the standard.

2011-01-21	Eric Norum <wenorum@lbl.gov>

	* libmisc/capture/capture.c: Avoid using TCB of task just deleted.

2010-11-16	Joel Sherrill <joel.sherrilL@OARcorp.com>

	PR 1718/cpukit
	* sapi/include/confdefs.h: POSIX threads are allocated twice the
	minimum stack space by default. confdefs.h only accounts for one
	minimum -- not the 2x factor.

2010-11-16	Joel Sherrill <joel.sherrilL@OARcorp.com>

	PR 1717/cpukit
	* libcsupport/src/gxx_wrappers.c: Free memory on error.

2010-08-27	Joel Sherrill <joel.sherrilL@OARcorp.com>

	PR 1693/filesystem
	* libfs/src/imfs/memfile.c: IMFS_memfile_get_block_pointer() was
	checking incorrect pointer and thus had dead code.

2010-08-27	Joel Sherrill <joel.sherrilL@OARcorp.com>

	PR 1692/filesystem
	* libcsupport/include/rtems/libio.h, libfs/src/imfs/imfs_eval.c: Fix
	implementation and use of rtems_libio_is_valid_perms().

2010-06-21	Peter Dufault <dufault@hda.com>

	PR 1570/cpukit
	* posix/src/semtimedwait.c: This routine is supposed to return -1/errno
	NOT the status directly.

2010-06-21	Joel Sherrill <joel.sherrilL@OARcorp.com>

	PR 1554/cpukit
	Coverity Id 17
	* libi2c/libi2c.c: Fix memory leak on error.

2010-03-17	Chris Johns <chrisj@rtems.org>

	* libfs/src/dosfs/msdos_create.c: Fix the date/time call order to
	'msdos_date_unix2dos'.

2009-12-11	Glenn Humphrey <glenn.humphrey@OARcorp.com>

	PR 1481/cpukit
	* rtems/src/ratemonperiod.c: Moved check for cpu usage being smaller
	than when period initiated.

2009-12-10	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1482
	* posix/src/timersettime.c: Exit dispatching critical section.

2009-12-10	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1480/cpukit
	* rtems/src/ratemonperiod.c: Use _Rate_monotonic_Update_statistics()