@@ -46,7 +46,7 @@ int pthread_cancel(
   if ( _ISR_Is_in_progress() )
     return EPROTO;
 
-  the_thread = _POSIX_Threads_Get( thread, &location );
+  the_thread = _Thread_Get( thread, &location );
   switch ( location ) {
 
     case OBJECTS_LOCAL:
